{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 4081,
  "lineage": "a5a806a1-7725-0b16-0d19-0283612ee1a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "caliper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-028ba9a4f21f692b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028ba9a4f21f692b3",
            "instance_state": "running",
            "instance_type": "c5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ab8370ce4e9d9c6",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-52-23-171-82.compute-1.amazonaws.com",
            "public_ip": "52.23.171.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-0a17a2a3314193eca",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "ps-vpc-ohio-caliper"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ibft_bootnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-099fd81533005798d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-099fd81533005798d",
            "instance_state": "running",
            "instance_type": "c5d.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d007fc39710c0683",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-3-208-24-94.compute-1.amazonaws.com",
            "public_ip": "3.208.24.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-082ae41396defb57b",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "benchmark-besu-ps-vpc-ohio-bootnode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-04a51e9cd572ba108"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.orion_bootnode",
            "aws_security_group.eth_sg",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ibft_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-0a40d608ce6150aa8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-0a40d608ce6150aa8",
            "instance_state": "running",
            "instance_type": "c5d.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa0ed8c08061d675",
            "private_dns": "ip-10-0-1-187.ec2.internal",
            "private_ip": "10.0.1.187",
            "public_dns": "ec2-3-81-224-214.compute-1.amazonaws.com",
            "public_ip": "3.81.224.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-07fa3bc3aac4e6060",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "benchmark-besu-ps-vpc-ohio-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-04a51e9cd572ba108"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.ibft_bootnode",
            "aws_instance.orion_bootnode",
            "aws_instance.orion_node",
            "aws_security_group.eth_sg",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-0c1a701dc074c486e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-0c1a701dc074c486e",
            "instance_state": "running",
            "instance_type": "c5d.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b6e822bcb8d0276",
            "private_dns": "ip-10-0-2-191.ec2.internal",
            "private_ip": "10.0.2.191",
            "public_dns": "ec2-34-229-51-60.compute-1.amazonaws.com",
            "public_ip": "34.229.51.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-0a283885cd90f91d7",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0791c131ceff389",
            "tags": {
              "Name": "benchmark-besu-ps-vpc-ohio-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-04a51e9cd572ba108"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.ibft_bootnode",
            "aws_instance.orion_bootnode",
            "aws_instance.orion_node",
            "aws_security_group.eth_sg",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-017a2f07c5ce5cdf6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-017a2f07c5ce5cdf6",
            "instance_state": "running",
            "instance_type": "c5d.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e56e3b9258f9cd77",
            "private_dns": "ip-10-0-3-248.ec2.internal",
            "private_ip": "10.0.3.248",
            "public_dns": "ec2-3-235-135-138.compute-1.amazonaws.com",
            "public_ip": "3.235.135.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-0e615117f470d04e9",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0941413c1f4c29ca1",
            "tags": {
              "Name": "benchmark-besu-ps-vpc-ohio-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-04a51e9cd572ba108"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.ibft_bootnode",
            "aws_instance.orion_bootnode",
            "aws_instance.orion_node",
            "aws_security_group.eth_sg",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ibft_rpcnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-03f2e85883bf8f6fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 8,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-03f2e85883bf8f6fa",
            "instance_state": "running",
            "instance_type": "c5d.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0444f814e7b5aed",
            "private_dns": "ip-10-0-2-234.ec2.internal",
            "private_ip": "10.0.2.234",
            "public_dns": "ec2-3-92-59-189.compute-1.amazonaws.com",
            "public_ip": "3.92.59.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-0b8624b5557a37997",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0791c131ceff389",
            "tags": {
              "Name": "benchmark-besu-ps-vpc-ohio-rpcnode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-04a51e9cd572ba108"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.ibft_bootnode",
            "aws_instance.orion_bootnode",
            "aws_instance.orion_rpcnode",
            "aws_security_group.eth_sg",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-007180223b737250b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-007180223b737250b",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e8c91310b63f4c0",
            "private_dns": "ip-10-0-1-183.ec2.internal",
            "private_ip": "10.0.1.183",
            "public_dns": "ec2-3-93-164-223.compute-1.amazonaws.com",
            "public_ip": "3.93.164.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-01642bb3e3cb6031b",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "ps-vpc-ohio-monitoring"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0291a8a368663bd58",
              "sg-0299a61e42319ee39"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_security_group.monitoring_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orion_bootnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-01d0a8e33a8c65b84",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-01d0a8e33a8c65b84",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025e34c4865fbc3a6",
            "private_dns": "ip-10-0-1-97.ec2.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-35-175-188-163.compute-1.amazonaws.com",
            "public_ip": "35.175.188.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-06ed330cf8576152d",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "orion-ps-vpc-ohio-bootnode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-0a569462e88ed4c9f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orion_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-0a35050e2a42835fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-0a35050e2a42835fb",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01233f46ba4d7c007",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_ip": "10.0.1.191",
            "public_dns": "ec2-54-167-6-242.compute-1.amazonaws.com",
            "public_ip": "54.167.6.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-01213d0ae304f015a",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "orion-ps-vpc-ohio-node-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-0a569462e88ed4c9f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.orion_bootnode",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-0b17e8f2903ab0c85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-0b17e8f2903ab0c85",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bed56c86aab82aa0",
            "private_dns": "ip-10-0-1-63.ec2.internal",
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-18-234-224-201.compute-1.amazonaws.com",
            "public_ip": "18.234.224.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-0ffbbc81a248e0fd8",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "orion-ps-vpc-ohio-node-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-0a569462e88ed4c9f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.orion_bootnode",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-08d06fb170e419c68",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-08d06fb170e419c68",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b650a07ab9464f9",
            "private_dns": "ip-10-0-1-112.ec2.internal",
            "private_ip": "10.0.1.112",
            "public_dns": "ec2-54-167-10-94.compute-1.amazonaws.com",
            "public_ip": "54.167.10.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-01b38f812c0d603c6",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "orion-ps-vpc-ohio-node-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-0a569462e88ed4c9f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.orion_bootnode",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "orion_rpcnode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:504983140689:instance/i-0468be4508952bf25",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ps-vpc-ohio_us-east-1_monitoring_profile",
            "id": "i-0468be4508952bf25",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pantheon-dev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b64aa1509851cb31",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-18-209-12-94.compute-1.amazonaws.com",
            "public_ip": "18.209.12.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "volume_id": "vol-05aa3d87f84a4cd48",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "orion-ps-vpc-ohio-rpcnode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0299a61e42319ee39",
              "sg-0a569462e88ed4c9f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.monitoring_profile",
            "aws_iam_role.monitoring_access_role",
            "aws_instance.orion_bootnode",
            "aws_security_group.orion_sg",
            "data.aws_ami.ubuntu",
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eth_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-04a51e9cd572ba108",
            "description": "ps-vpc-ohio_eth_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a51e9cd572ba108",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8545,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8545
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8546,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8546
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8547,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8547
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9545,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9545
              }
            ],
            "name": "ps-vpc-ohio_eth_sg",
            "name_prefix": null,
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-0291a8a368663bd58",
            "description": "ps-vpc-ohio_monitoring_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291a8a368663bd58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "ps-vpc-ohio_monitoring_sg",
            "name_prefix": null,
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-0a569462e88ed4c9f",
            "description": "ps-vpc-ohio_orion_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a569462e88ed4c9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "ps-vpc-ohio_orion_sg",
            "name_prefix": null,
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.http_80_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-041ad00b5d2835de4",
            "description": "ps-vpc-ohio_http_sg",
            "egress": [],
            "id": "sg-041ad00b5d2835de4",
            "ingress": [],
            "name": "ps-vpc-ohio_http_sg-20201105073241085900000004",
            "name_prefix": "ps-vpc-ohio_http_sg-",
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ps-vpc-ohio_http_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_80_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-778771061",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-041ad00b5d2835de4",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.http_80_security_group.module.sg.aws_security_group.this",
            "module.http_80_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.http_80_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1145726961",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-041ad00b5d2835de4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.http_80_security_group.module.sg.aws_security_group.this",
            "module.http_80_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.http_80_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1148487678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-041ad00b5d2835de4",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.http_80_security_group.module.sg.aws_security_group.this",
            "module.http_80_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.https_443_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-0db98a2234f734d7a",
            "description": "ps-vpc-ohio_https_sg",
            "egress": [],
            "id": "sg-0db98a2234f734d7a",
            "ingress": [],
            "name": "ps-vpc-ohio_https_sg-20201105073237951700000003",
            "name_prefix": "ps-vpc-ohio_https_sg-",
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ps-vpc-ohio_https_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.https_443_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1343408645",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0db98a2234f734d7a",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.https_443_security_group.module.sg.aws_security_group.this",
            "module.https_443_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.https_443_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1296587854",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0db98a2234f734d7a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.https_443_security_group.module.sg.aws_security_group.this",
            "module.https_443_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.https_443_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1436480930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0db98a2234f734d7a",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.https_443_security_group.module.sg.aws_security_group.this",
            "module.https_443_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:security-group/sg-0299a61e42319ee39",
            "description": "ps-vpc-ohio_ssh_sg",
            "egress": [],
            "id": "sg-0299a61e42319ee39",
            "ingress": [],
            "name": "ps-vpc-ohio_ssh_sg-20201105073237950100000002",
            "name_prefix": "ps-vpc-ohio_ssh_sg-",
            "owner_id": "504983140689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ps-vpc-ohio_ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-738890587",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0299a61e42319ee39",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-283583328",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0299a61e42319ee39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-865283488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0299a61e42319ee39",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.ssh_security_group.module.sg.aws_security_group.this",
            "module.ssh_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04a1547ea7eccebb4",
            "public_dns": "ec2-18-233-210-54.compute-1.amazonaws.com",
            "public_ip": "18.233.210.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ps-vpc-ohio-us-east-1a",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:internet-gateway/igw-063bdfdf795e3f118",
            "id": "igw-063bdfdf795e3f118",
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a1547ea7eccebb4",
            "id": "nat-0142572f42f18f763",
            "network_interface_id": "eni-0cbf239bd15afb86d",
            "private_ip": "10.0.1.51",
            "public_ip": "18.233.210.54",
            "subnet_id": "subnet-0f08e91d24ce662b2",
            "tags": {
              "Name": "ps-vpc-ohio-us-east-1a",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db7d7a5be0b77e9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0142572f42f18f763",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db7d7a5be0b77e9c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063bdfdf795e3f118",
            "id": "r-rtb-02e8c21382febd7211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02e8c21382febd721",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fdeb89a27d2c8848",
            "owner_id": "504983140689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ps-vpc-ohio-intra",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db7d7a5be0b77e9c",
            "owner_id": "504983140689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ps-vpc-ohio-private",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e8c21382febd721",
            "owner_id": "504983140689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ps-vpc-ohio-public",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d3e5dbc246b2a39",
            "route_table_id": "rtb-0fdeb89a27d2c8848",
            "subnet_id": "subnet-00a72dc6d0726f561"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00338a876e95cce01",
            "route_table_id": "rtb-0fdeb89a27d2c8848",
            "subnet_id": "subnet-07284dbb91c84c8b8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072e97d2be09421e1",
            "route_table_id": "rtb-0fdeb89a27d2c8848",
            "subnet_id": "subnet-0224b9bce98a41e6e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0024b9f92bba73f7d",
            "route_table_id": "rtb-0db7d7a5be0b77e9c",
            "subnet_id": "subnet-0129847fae7f714e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bb3d9fc4e340de6",
            "route_table_id": "rtb-0db7d7a5be0b77e9c",
            "subnet_id": "subnet-06f29bf0acd7bc025"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfba58d65178a31f",
            "route_table_id": "rtb-0db7d7a5be0b77e9c",
            "subnet_id": "subnet-00d2331d569f789b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d0edf454363d582",
            "route_table_id": "rtb-02e8c21382febd721",
            "subnet_id": "subnet-0f08e91d24ce662b2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c366ad45be320b2",
            "route_table_id": "rtb-02e8c21382febd721",
            "subnet_id": "subnet-0c0791c131ceff389"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cdf444e08b980f2",
            "route_table_id": "rtb-02e8c21382febd721",
            "subnet_id": "subnet-0941413c1f4c29ca1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-00a72dc6d0726f561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-00a72dc6d0726f561",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-intra-us-east-1a",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-07284dbb91c84c8b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-07284dbb91c84c8b8",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-intra-us-east-1b",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-0224b9bce98a41e6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-0224b9bce98a41e6e",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-intra-us-east-1c",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-0129847fae7f714e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0129847fae7f714e6",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-private-us-east-1a",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-06f29bf0acd7bc025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-06f29bf0acd7bc025",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-private-us-east-1b",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-00d2331d569f789b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-00d2331d569f789b3",
            "map_public_ip_on_launch": false,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-private-us-east-1c",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-0f08e91d24ce662b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f08e91d24ce662b2",
            "map_public_ip_on_launch": true,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-public-us-east-1a",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-0c0791c131ceff389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c0791c131ceff389",
            "map_public_ip_on_launch": true,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-public-us-east-1b",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:subnet/subnet-0941413c1f4c29ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0941413c1f4c29ca1",
            "map_public_ip_on_launch": true,
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio-public-us-east-1c",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            },
            "vpc_id": "vpc-0485918c30eabd2e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:504983140689:vpc/vpc-0485918c30eabd2e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cd2b081d430af65",
            "default_route_table_id": "rtb-09f0f506be57ce1b0",
            "default_security_group_id": "sg-0b1adc62c2178b32f",
            "dhcp_options_id": "dopt-fc439187",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0485918c30eabd2e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f0f506be57ce1b0",
            "owner_id": "504983140689",
            "tags": {
              "Name": "ps-vpc-ohio",
              "terraform": "true",
              "vpc": "ps-vpc-ohio"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}